--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:layout_marginBottom="40dp"
+
     android:orientation="vertical"
     android:background="@color/white"
     tools:context=".MainActivity">
@@ -19,16 +19,16 @@
         android:textSize="17sp"
         android:gravity="center"
         android:paddingVertical="15dp"
-        android:background="#c0b3bc"
+        android:background="#24BBFF"
         android:textColor="@color/white"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="40dp"
         android:letterSpacing=".2"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="LOCATION"
         android:fontFamily="monospace"
-        android:textSize="15sp"
+        android:textSize="10sp"
         android:layout_marginLeft="30dp"
         android:textColor="@color/black"
         android:letterSpacing=".1"/>
@@ -44,21 +44,22 @@
             android:fontFamily="monospace"
             android:textSize="24sp"
             android:hint="Enter a city"
-            android:paddingVertical="26dp"
-
-            android:layout_marginBottom="20dp"
+            android:textCursorDrawable="@color/black"
+            android:backgroundTint="@color/white"
+            android:paddingVertical="20dp"
+            android:letterSpacing=".1"
             android:id="@+id/city"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="40dp"
             android:layout_height="40dp"
+
+            android:background="@color/white"
             android:fontFamily="monospace"
             android:letterSpacing=".1"
-            android:layout_marginBottom="20dp"
-            android:background="@color/white"
-            android:outlineProvider="none"
             android:onClick="getWeatherDetails"
-            android:text="SET"/>
+            android:outlineProvider="none"
+            android:text="SET" />
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
@@ -72,75 +73,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center_horizontal">
-            <androidx.cardview.widget.CardView
+           android:gravity="center">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#f6f5fa"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="8dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="200dp"
-                        android:paddingHorizontal="20dp"
-                        android:paddingVertical="40dp"/>
+                android:layout_marginBottom="120dp"/>
 
-                    <LinearLayout
-                        android:layout_weight="1.2"
-                        android:layout_width="0dp"
-                        android:layout_height="200dp"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="serif-monospace"
-                            android:letterSpacing=".1"
-                            android:paddingStart="10dp"
-                            android:textStyle="bold"
-                            android:textColor="@color/black"
-                            android:textSize="45sp"
-                            android:id="@+id/temperature"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="monospace"
-                            android:letterSpacing=".1"
-                            android:textSize="30sp"
-                            android:paddingStart="10dp"
-                            android:textColor="@color/black"
-                            android:layout_marginVertical="10dp"
-                            android:id="@+id/weather"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="monospace"
-                            android:letterSpacing=".1"
-                            android:paddingStart="10dp"
-                            android:textColor="@color/black"
-                            android:id="@+id/date"/>
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="MY WEATHER   ----------------"
-                android:fontFamily="monospace"
-                android:textSize="17sp"
-                android:gravity="center"
-                android:paddingVertical="8dp"
-                android:layout_marginVertical="50dp"
-
-                android:letterSpacing=".2"/>
         </LinearLayout>
 
 
